--- a/simple-loan-validation-spark-runner/pom.xml
+++ b/simple-loan-validation-spark-runner/pom.xml
@@ -6,14 +6,56 @@
 	<artifactId>simpleloanvalidationsparkrunner</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
-	<name>simpleloanvalidationsparkrunner</name>
-	<description>This is an iintegration sample of a rule based automation in Apache Spark  </description>
-	<packaging>pom</packaging>
 
-	<modules>
-		<module>loan-validation-xom</module>
-		<module>decisions-spark-core</module>
-		<module>loanvalidation-spark</module>
-	</modules>
+	<packaging>jar</packaging>
+	<name>ODMDev/sparko</name>
+	<description></description>
+	<properties>
+		<jrules.version>8.9.2</jrules.version>
+		<jrules.install>TOBEFILL</jrules.install>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.ilog.rules.executionserver</groupId>
+			<artifactId>jrules-res</artifactId>
+			<version>${jrules.version}</version>
+			<scope>system</scope>
+    		<systemPath>${jrules.install}/executionserver/lib/jrules-res-execution.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.ilog.rules.executionserver</groupId>
+			<artifactId>loanvalidation</artifactId>
 
+			<version>${jrules.version}</version>
+			<scope>system</scope>
+    		<systemPath>${basedir}/libs/loanvalidation-xom.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>javax.resource</groupId>
+			<artifactId>connector-api</artifactId>
+			<version>1.5-IBM</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.11</artifactId>
+		<version>2.1.0</version>
+		</dependency>
+		
+		
+
+<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+<dependency>
+    <groupId>joda-time</groupId>
+    <artifactId>joda-time</artifactId>
+    <version>2.9.3</version>
+</dependency>
+
+	</dependencies>
+
+	<!--======================= -->
+	<!-- BUILD PROCESS & LAYOUT -->
+	<!--======================= -->
+	
 </project>
+
+
