--- a/simple-loan-validation-spark-runner/pom.xml
+++ b/simple-loan-validation-spark-runner/pom.xml
@@ -12,7 +12,7 @@
     <description></description>
     <properties>
         <odm.version>8.9.2</odm.version>
-        <odm.install>ODM_HOME_DIRECTORY</odm.install>
+        <odm.install>/Users/pierrefeillet/Libs/ODM/8920</odm.install>
     </properties>
     <dependencies>
         <dependency>
@@ -22,13 +22,13 @@
             <scope>system</scope>
             <systemPath>${odm.install}/executionserver/lib/jrules-res-execution.jar</systemPath>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>com.ilog.rules.executionserver</groupId>
             <artifactId>loanvalidation</artifactId>
             <version>${odm.version}</version>
             <scope>system</scope>
             <systemPath>${basedir}/libs/loanvalidation-xom.jar</systemPath>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>com.ilog.rules.executionserver</groupId>
             <artifactId>loanvalidation-ruleapp</artifactId>
