--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 *.com
 *.class
 
+# Compiled target
+###################
+*/target/*
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
