--- a/simple-loan-validation-spark-runner/pom.xml
+++ b/simple-loan-validation-spark-runner/pom.xml
@@ -45,6 +45,16 @@
             <scope>system</scope>
             <systemPath>${odm.install}/executionserver/lib/j2ee_connector-1_5-fr.jar</systemPath>
         </dependency>
+        
+        <dependency>
+            <groupId>com.ilog.rules.executionserver</groupId>
+            <artifactId>license-metric-logger</artifactId>
+            <version>${odm.version}</version>
+            <scope>system</scope>
+            <systemPath>${odm.install}/executionserver/lib/license_metric_logger_2.1.1.201507131115.jar</systemPath>
+            <optional>true</optional>
+        </dependency>
+        
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
