--- a/bai-loan-validation-spark-runner/src/main/resources/plugin-configuration.properties
+++ b/bai-loan-validation-spark-runner/src/main/resources/plugin-configuration.properties
@@ -1,11 +1,11 @@
 
 
-com.ibm.rules.bai.plugin.kafka.ssl.truststore.location=truststore.p12
+com.ibm.rules.bai.plugin.kafka.ssl.truststore.location=./src/main/resources/truststore.p12
+com.ibm.rules.bai.plugin.kafka.ssl.truststore.type=PKCS12
 com.ibm.rules.bai.plugin.kafka.security.protocol=SASL_SSL
-com.ibm.rules.bai.plugin.kafka.ssl.truststore.password=<value>
+com.ibm.rules.bai.plugin.kafka.ssl.truststore.password=73e47e54-01ae-4eb4-bc59-97fd74ea4caf
 com.ibm.rules.bai.plugin.kafka.ssl.protocol=TLSv1.2
 com.ibm.rules.bai.plugin.kafka.sasl.mechanism=PLAIN
-com.ibm.rules.bai.plugin.kafka.bootstrap.servers=<bootstrap-servers>
-com.ibm.rules.bai.plugin.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username=<username> password=<password>;
-com.ibm.rules.bai.plugin.topic=<topic-name>
-#com.ibm.rules.bai.plugin.kafka.acks=all
+com.ibm.rules.bai.plugin.kafka.bootstrap.servers=server:29092
+com.ibm.rules.bai.plugin.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username=admin password=admin;
+com.ibm.rules.bai.plugin.topic=bai-ingress
