--- a/simple-loan-validation-spark-runner/pom.xml
+++ b/simple-loan-validation-spark-runner/pom.xml
@@ -46,10 +46,15 @@
             <scope>system</scope>
             <systemPath>${odm.install}/executionserver/lib/j2ee_connector-1_5-fr.jar</systemPath>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>2.1.0</version>
+        </dependency-->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>3.1.2</version>
         </dependency>
 
 
@@ -73,7 +78,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>com.ibm.decisions.spark.loanvalidation.SimpleLoanValidationSparkRunnerCSV</mainClass>
+                    <mainClass>com.ibm.decisions.spark.loanvalidation.SimpleLoanValidationSparkRunner</mainClass>
                 </configuration>
 
             </plugin>
